<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- pub -->
    <string name="hello">OPPO Game Engine</string>
    <string name="app_name">OPPO 2D游戏引擎</string>
	<string name="quit_game">您确定要退出游戏吗？</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="sample">示例</string>
	<string name="Da_Di_Shu">打地鼠</string>
	<string name="Da_Fei_Ji">打飞机</string>
	<string name="begin">开始</string>
	<string name="option">设置</string>
	<string name="score">分数</string>
	<string name="back">返回</string>
	<string name="your_score">您的得分：</string>
	<string name="your_name">您的大名：</string>
	<string name="lion">your name</string>
	<string name="no_record">没有记录</string>
	<string name="log_out">登出账号</string>
	<string name="please_log_in">请登录</string>
	<string name="open_GC">打开游戏中心</string>

	<!-- 打地鼠 -->
	<string name="buy_time_title">购买时间</string>
	<string name="buy_time_content">花1分钱就能购买60秒游戏时间。</string>
	<string name="score_submit_success">成功提交分数</string>
	<string name="score_submit_fail">分数提交失败</string>
	<string name="ach_unlock_success">成功解开成就</string>
	<string name="ach_unlock_fail">解开成就失败</string>
	<string name="check_board">查看排行榜</string>
	<string name="check_high_board">查看高分榜</string>
	<string name="check_low_board">查看低分榜</string>
	<string name="check_ach">查看成就</string>
	<string name="whether_check_board">是否查看排行榜</string>
	<string name="your_score">你的得分是：</string>


</resources>
