<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:id="@+id/LinearLayout01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_height="wrap_content" android:id="@+id/your_score" android:text="@string/your_score" android:layout_width="wrap_content"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" android:id="@+id/score" android:textSize="20dip" android:textStyle="bold|italic"></TextView></LinearLayout>


<LinearLayout android:id="@+id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/your_name" android:text="@string/your_name"></TextView>
<EditText android:layout_height="wrap_content" android:id="@+id/name" android:text="@string/lion" android:layout_width="fill_parent"></EditText>
</LinearLayout>
<LinearLayout android:id="@+id/LinearLayout04" android:layout_width="wrap_content" android:layout_height="wrap_content"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/yes" android:text="@string/ok"></Button>
</LinearLayout>
</LinearLayout>
