<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" >
        </Button>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_above="@id/LinearLayout04" android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="20dip"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whether_check_board" />
    </LinearLayout>

</RelativeLayout>